--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "contributors": "all-contributors add && all-contributors generate"
   },
   "files": [
-    "dist"
+    "src"
   ],
   "dependencies": {
     "array.partial": "^1.0.5",
